--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 .jumbotron {
 	position: relative;
 	padding-top: 2rem;
-	background-color: #5893f1;
+	background-color: #010D44;
 	overflow: hidden;
 }
 
